--- a/train.yaml
+++ b/train.yaml
@@ -9,13 +9,13 @@ CORRUPTION:
   SEVERITY:
     - 5
   TYPE:
-    - gaussian_noise
+    # - gaussian_noise
     # - shot_noise
     # - impulse_noise
     # - defocus_blur
     # - glass_blur
     # - motion_blur
-    # - zoom_blur
+    - zoom_blur
     # - snow
     # - frost
     # - fog
