--- a/imagenet/train_imagenetc.yaml
+++ b/imagenet/train_imagenetc.yaml
@@ -15,14 +15,14 @@ CORRUPTION:
     # - defocus_blur
     # - glass_blur
     # - motion_blur
-    - zoom_blur
+    # - zoom_blur
     # - snow
     # - frost
     # - fog
     # - brightness
     # - contrast
     # - elastic_transform
-    # - pixelate
+    - pixelate
     # - jpeg_compression
 OPTIM:
   METHOD: SGD
