add_cifar100c_aug

--- a/imagenet/train_imagenetc.yaml
+++ b/imagenet/train_imagenetc.yaml
@@ -9,7 +9,7 @@ CORRUPTION:
   SEVERITY:
     - 5
   TYPE:
-    # - gaussian_noise
+    - gaussian_noise
     # - shot_noise
     # - impulse_noise
     # - defocus_blur
@@ -22,7 +22,7 @@ CORRUPTION:
     # - brightness
     # - contrast
     # - elastic_transform
-    - pixelate
+    # - pixelate
     # - jpeg_compression
 OPTIM:
   METHOD: SGD
