--- a/imagenet/train_imagenetc.yaml
+++ b/imagenet/train_imagenetc.yaml
@@ -1,4 +1,5 @@
 DATA_DIR: /home/yxue/datasets
+RNG_SEED: 3407
 MODEL:
   ADAPTATION: source
   ARCH: Standard_R50
@@ -12,18 +13,18 @@ CORRUPTION:
     - gaussian_noise
     # - shot_noise
     # - impulse_noise
-    # - defocus_blur
+    - defocus_blur
     # - glass_blur
     # - motion_blur
     # - zoom_blur
-    # - snow
+    - snow
     # - frost
     # - fog
     # - brightness
     # - contrast
     # - elastic_transform
     # - pixelate
-    # - jpeg_compression
+    - jpeg_compression
 OPTIM:
   METHOD: SGD
   LR: 0.001
