--- a/imagenet/train_imagenetc.yaml
+++ b/imagenet/train_imagenetc.yaml
@@ -8,16 +8,16 @@ TEST:
 CORRUPTION:
   DATASET: imagenet
   SEVERITY:
-    - 5
+    - 3
   TYPE:
-    - gaussian_noise
+    # - gaussian_noise
     # - shot_noise
     # - impulse_noise
-    - defocus_blur
+    # - defocus_blur
     # - glass_blur
     # - motion_blur
     # - zoom_blur
-    - snow
+    # - snow
     # - frost
     # - fog
     # - brightness
