--- a/imagenet/train_imagenetc.yaml
+++ b/imagenet/train_imagenetc.yaml
@@ -12,14 +12,14 @@ CORRUPTION:
   TYPE:
     # - gaussian_noise
     # - shot_noise
-    # - impulse_noise
+    - impulse_noise
     # - defocus_blur
     # - glass_blur
     # - motion_blur
     # - zoom_blur
     # - snow
     # - frost
-    - fog
+    # - fog
     # - brightness
     # - contrast
     # - elastic_transform
